--- a/app/pages/register-user/register-user.html
+++ b/app/pages/register-user/register-user.html
@@ -5,30 +5,30 @@
 </ion-header>
 
 <ion-content padding>
-    <form id="queroMeCadastrar-form2">
-        <ion-list id="queroMeCadastrar-list2">
+    <form (ngSubmit)="createUser(user)">
+        <ion-list>
             <ion-item>
               <ion-label>Nome:</ion-label>
-              <ion-input type="text"></ion-input>
+              <ion-input [(ngModel)]="user.name" type="text" name="name"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label>Email:</ion-label>
-              <ion-input type="email"></ion-input>
+              <ion-input [(ngModel)]="user.email" type="email" name="email"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label>Minha casa:</ion-label>
-              <ion-input type="text"></ion-input>
+              <ion-input [(ngModel)]="user.location" type="text" name="location"></ion-input>
               <ion-icon name="pin" item-right></ion-icon>
             </ion-item>
             <ion-item>
               <ion-label>Senha:</ion-label>
-              <ion-input type="password"></ion-input>
+              <ion-input [(ngModel)]="user.password" type="password" name="password"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label>Confirmação da senha:</ion-label>
-              <ion-input type="password"></ion-input>
+              <ion-input [(ngModel)]="user.confirm_password" type="password" name="confirm_password"></ion-input>
             </ion-item>
         </ion-list>
-        <button id="queroMeCadastrar-button3" class="button button-royal button-large button-block">Criar conta</button>
+        <input type="submit" class="button button-royal button-large button-block" value="Criar conta"/>
     </form>
 </ion-content>
