--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs>
   <ion-tab [root]="tabRootHome" tabIcon="md-pin"></ion-tab>
   <ion-tab [root]="tabRootReportCase" tabIcon="md-locate"></ion-tab>
-  <ion-tab [root]="tabRootCases" tabIcon="md-globe"></ion-tab>
+  <ion-tab [root]="tabRootCases" tabIcon="md-globe"><img src="" alt=""></ion-tab>
   <ion-tab [root]="tabRootUser" tabIcon="md-person"></ion-tab>
 </ion-tabs>
