--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
   <link ios-href="build/css/app.ios.css" rel="stylesheet">
   <link md-href="build/css/app.md.css" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">
+  
 </head>
 <body>
 
@@ -25,5 +26,6 @@
   <script src="build/js/zone.js"></script>
   <!-- The bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgNih6IMSYh-o0JkJoQGe9V-F_RQlOoC8" async defer></script>
 </body>
 </html>
