--- a/app/pages/maps/maps.html
+++ b/app/pages/maps/maps.html
@@ -1,10 +1,8 @@
 <ion-header>
-  <ion-navbar favorite>
-    <ion-title>Mapa</ion-title>
+  <ion-navbar>
+    <ion-title>Minha casa</ion-title>
     <ion-buttons end>
-      <button (click)="savePosition()">
-        <ion-icon name="checkmark"></ion-icon>
-      </button>
+      <button (click)="savePosition()">OK</button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
