Tela inicial de estatísticas

--- a/app/pages/cases/cases.html
+++ b/app/pages/cases/cases.html
@@ -1,12 +1,34 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>cases</ion-title>
+    <ion-title>Estatísticas e Relatórios</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-left>
+        <img src="https://www.iped.com.br/_upload/content/2015/08/26/natureza-tratamento-alma.jpg">
+      </ion-thumbnail>
+      <h2>Meus casos</h2>
+      <button clear item-right>Confira</button>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail item-left>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTW1XeBi-et9AFXHvUSQHJz48LlpQT4507Fus7RQnlR5-F-t696">
+      </ion-thumbnail>
+      <h2>Meu bairro</h2>
+      <button clear item-right>Confira</button>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail item-left>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSSlrR4c1JpqnzrHrK2LyCYe9y9cTK1XTldfc4aWJhFPCkTBKS">
+      </ion-thumbnail>
+      <h2>Áreas mais atingidas</h2>
+      <button clear item-right>Confira</button>
+    </ion-item>
+  </ion-list>
 </ion-content>
