Added map in detail page

--- a/app/pages/cases/my-cases.html
+++ b/app/pages/cases/my-cases.html
@@ -12,8 +12,8 @@
                 <img>
             </ion-avatar>
             <div item-center>{{case.create_date}}</div>
-            <!-- COLOCAR ENDEREÇO COMPLETO NO MODELO DE DADOS E TRAZE-LO AQUI ABAIXO -->
-            <div item-center>{{case.lat}}</div>
+            <div item-center>{{case.address}}</div>
+            <div item-center>{{case.name}}</div>
         </ion-item>
         <div class="item-divider"></div>
     </ion-list>
