--- a/app/pages/cases/detail-case.html
+++ b/app/pages/cases/detail-case.html
@@ -1,19 +1,21 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>{{ case.category_id }}</ion-title>
+    <ion-title>{{ case.name }}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <div>
-    <ion-img src="{{case.image}}"></ion-img>
-    <div class="box-image-empty" [hidden]="hasImage"></div>
+    <ion-img [src]="case.image"></ion-img>
+  </div>
+  <div>
+    <img [src]="case.map" alt="Mapa">
   </div>
   <div class="content-padding ">
     <p class="text-bold">Data:</p>
     <p>{{case.create_date}}</p>
     <p class="text-bold">Endereço:</p>
-    <p>COLOCAR NO MODELO DE DADOS!!!</p>
+    <p>{{ case.address }}</p>
     <p class="text-bold">Comentário:</p>
     <p>{{case.comments}}</p>
   </div>
