Added image default to cases without image - yet not work correctly

--- a/app/pages/cases/detail-case.html
+++ b/app/pages/cases/detail-case.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <div>
+  <div [hidden]="!hasImage">
     <ion-img [src]="case.image"></ion-img>
   </div>
   <div>
