--- a/app/pages/report-case/report-case.html
+++ b/app/pages/report-case/report-case.html
@@ -14,7 +14,7 @@
         <ion-list>
             <ion-item>
               <ion-label>Localização:</ion-label>
-              <ion-input [(ngModel)]="data.location" on-tap="openMap()" type="text" id="location" name="location" required></ion-input>
+              <ion-input [(ngModel)]="data.address" on-tap="openMap()" type="text" id="address" name="address" required></ion-input>
               <ion-icon name="pin" item-right></ion-icon>
             </ion-item>
             <ion-item>
