--- a/app/pages/cases/close-cases.html
+++ b/app/pages/cases/close-cases.html
@@ -5,5 +5,19 @@
 </ion-header>
 
 <ion-content padding>
-  aquiiiiiiii =D
+    <div>
+        <p>XX casos nos últimos 7 dias</p>
+    </div>
+    <ion-list *ngFor="let case of cases" tappable (click)="detailCasePage(case)">
+        <ion-item no-lines class="item-list">
+            <ion-avatar [ngStyle]="{'background': getImage(case.image), 'background-color': getImage(case.image) }" class="item-avatar"
+                item-left>
+                <img>
+            </ion-avatar>
+            <div item-center>{{case.create_date}}</div>
+            <div item-center>{{case.address}}</div>
+            <div item-center>{{case.name}}</div>
+        </ion-item>
+        <div class="item-divider"></div>
+    </ion-list>
 </ion-content>
