--- a/app/pages/cases/close-cases.html
+++ b/app/pages/cases/close-cases.html
@@ -4,10 +4,10 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-    <div>
+<ion-content >
+    <ion-card-content class="box-content-qnt-cases">
         <p>XX casos nos últimos 7 dias</p>
-    </div>
+    </ion-card-content>
     <ion-list *ngFor="let case of cases" tappable (click)="detailCasePage(case)">
         <ion-item no-lines class="item-list">
             <ion-avatar [ngStyle]="{'background': getImage(case.image), 'background-color': getImage(case.image) }" class="item-avatar"
