--- a/app/pages/cases/detail-close-cases.html
+++ b/app/pages/cases/detail-close-cases.html
@@ -5,9 +5,11 @@
 </ion-header>
 
 <ion-content>
+  <div class="box-content-map">
     <div id="route-map">
-
     </div>
+  </div>
+    
   <!--<div [hidden]="!hasImage">
     <ion-img [src]="case.image"></ion-img>
   </div>
