--- a/app/pages/cases/detail-close-cases.html
+++ b/app/pages/cases/detail-close-cases.html
@@ -5,6 +5,10 @@
 </ion-header>
 
 <ion-content>
+  <ion-card-content class="box-content-mesage">
+    <h4 class="text-center">Fique Atento!</h4>
+    <h5>{{ case.category_description }}</h5>
+  </ion-card-content>
   <div class="box-content-map">
     <div id="route-map">
     </div>
