--- a/app/pages/user/user.html
+++ b/app/pages/user/user.html
@@ -1,12 +1,3 @@
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>user</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
-  <a href="#" (click)="doLogout()" class="button button-royal  button-block button-clear">Logout</a>
+  <a href="#" (click)="doLogout()" class="button button-royal  button-block button-clear">Sair</a>
 </ion-content>
