--- a/app/pages/cases/cases.html
+++ b/app/pages/cases/cases.html
@@ -7,7 +7,7 @@
   </ion-item>
   <ion-item (click)="closeCasesPage()">
     <ion-icon name="compass" item-left></ion-icon>
-      Casos próximos a mim
+      Casos próximos a minha casa
   </ion-item>
   <ion-item (click)="allCasesPage()">
     <ion-icon name="pin" item-left></ion-icon>
@@ -15,7 +15,7 @@
   </ion-item>
   <ion-item (click)="commonDiseasesPage()">
     <ion-icon name="analytics" item-left></ion-icon>
-      Doenças mais frequentes
+      Casos mais frequentes
   </ion-item>
 </ion-list>
 </ion-content>
