--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>Ionic</title>
@@ -10,8 +11,9 @@
   <link ios-href="build/css/app.ios.css" rel="stylesheet">
   <link md-href="build/css/app.md.css" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">
-  
+
 </head>
+
 <body>
 
   <!-- This is Ionic's root component, where the app will load -->
@@ -27,5 +29,8 @@
   <!-- The bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgNih6IMSYh-o0JkJoQGe9V-F_RQlOoC8" async defer></script>
+  <script src="lib/markerclusterer.js"></script>
+  
 </body>
+
 </html>
