--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs id="tabs-content">
+<ion-tabs id="tabs-content" primary>
   <ion-tab [root]="tabRootHome" tabIcon="md-pin"></ion-tab>
   <ion-tab [root]="tabRootReportCase" tabIcon="md-locate"></ion-tab>
   <ion-tab [root]="tabRootCases" tabIcon="md-stats" tabs-md-tab-color-active="#425cf4"><img src="" alt=""></ion-tab>
