--- a/app/pages/cases/detail-close-cases.html
+++ b/app/pages/cases/detail-close-cases.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar primary>
     <ion-title>{{ case.create_date }}</ion-title>
   </ion-navbar>
 </ion-header>
