--- a/app/pages/report-case/report-case.html
+++ b/app/pages/report-case/report-case.html
@@ -1,8 +1,8 @@
-<ion-header>
+<!--<ion-header>
   <ion-navbar>
     <ion-title>Adicionar casos</ion-title>   
   </ion-navbar>
-</ion-header>
+</ion-header>-->
 
 <ion-content padding>
     <form (ngSubmit)="saveCase(data)">
