Ajustes de tabs e descomentando push service

--- a/app/pages/cases/my-cases.html
+++ b/app/pages/cases/my-cases.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding hide-tabs>
+<ion-content padding>
     <div [hidden]="hasCases">
         <p>Você ainda não registrou nenhum caso</p>
     </div>
