--- a/app/pages/cases/graphs-cases.html
+++ b/app/pages/cases/graphs-cases.html
@@ -1,46 +1,10 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>Gráficos</ion-title>
+        <ion-title>Casos frequentes</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content>
-    <!--<ion-grid id="table">
-        <ion-row id="header">
-            <ion-col>
-                Bairro
-            </ion-col>
-            <ion-col>
-                Foco de mosquitos
-            </ion-col>
-            <ion-col>
-                Dengue
-            </ion-col>
-            <ion-col>
-                Zika
-            </ion-col>
-            <ion-col>
-                Chikungunya
-            </ion-col>
-        </ion-row>
-        <ion-row *ngFor="let item of items">
-            <ion-col>
-                {{item.neighborhood}}
-            </ion-col>
-            <ion-col>
-                {{item.foco}}
-            </ion-col>
-            <ion-col>
-                {{item.dengue}}
-            </ion-col>
-            <ion-col>
-                {{item.zika}}
-            </ion-col>
-            <ion-col>
-                {{item.chikungunya}}
-            </ion-col>
-        </ion-row>
-    </ion-grid>-->
     <table>
         <tr id="header">
             <th class="firstTd">
