--- a/app/pages/maps/maps.html
+++ b/app/pages/maps/maps.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Minha casa</ion-title>
+    <ion-title>Marque um ponto</ion-title>
     <ion-buttons end>
       <button (click)="savePosition()">OK</button>
     </ion-buttons>
