--- a/app/pages/cases/graphs-cases.html
+++ b/app/pages/cases/graphs-cases.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar primary>
         <ion-title>Casos frequentes</ion-title>
     </ion-navbar>
 </ion-header>
