Alter layout, images, icons

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -11,8 +11,7 @@
   <div id="mapHome"></div>
     <div id="legend">
       Legenda:
-      <div class="display-flex"><div class="legend-box" style="background: #D90022;"></div> Aedes aegypti</div>
-      <div class="display-flex"><div class="legend-box" style="background: #92DD5A;"></div> Dengue</div>
+      <div class="display-flex-all"><div class="legend-box-all" style="background: #D90022;"></div> Dengue</div>
       <div class="display-flex"><div class="legend-box" style="background: #006DF0;"></div> Zica</div>
       <div class="display-flex"><div class="legend-box" style="background: #000000;"></div> Chikungunya</div>
     </div>
