--- a/app/pages/maps/maps.html
+++ b/app/pages/maps/maps.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar primary>
     <ion-title>Marque um ponto</ion-title>
     <ion-buttons end>
       <button (click)="savePosition()">OK</button>
