--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -8,9 +8,10 @@
 </ion-header>-->
 
 <ion-content>
+  <div id="closeYou">Casos próximos a você</div>
   <div id="mapHome"></div>
     <div id="legend">
-      Legenda:
+     <span class="text-bold">Legenda:</span>
       <div class="display-flex-all"><div class="legend-box-all" style="background: #D90022;"></div> Dengue</div>
       <div class="display-flex"><div class="legend-box" style="background: #006DF0;"></div> Zica</div>
       <div class="display-flex"><div class="legend-box" style="background: #000000;"></div> Chikungunya</div>
