--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -1,9 +1,9 @@
-<ion-content overflow-scroll="false" scroll="true" padding>
+<ion-content overflow-scroll="false" scroll="true" padding class="login">
   <form (ngSubmit)="doLogin(user)">
     <div style="width: 300px; height: 273px;"></div>
     <ion-list>
       <ion-item>
-        <ion-label>Email</ion-label>
+        <ion-label>Email:</ion-label>
         <ion-input [value]="user.email" (input)="checkEmail($event)" [class.invalid]="emailInvalid"
           ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" name="email" type="text" required></ion-input>
       </ion-item>
@@ -12,7 +12,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label>Senha</ion-label>
+        <ion-label>Senha:</ion-label>
         <ion-input [value]="user.password" (input)="checkPassword($event)" [class.invalid]="passwordInvalid" 
             name="password" minlenght="3" type="password" required></ion-input>
       </ion-item>
@@ -20,7 +20,7 @@
         <p>Senha inválida!</p>
       </ion-item>
     </ion-list>
-    <input [disabled]="passwordInvalid || emailInvalid" id="btn_login" type="submit" class="button button-royal button-large button-block" value="ENTRAR" />
+    <input [disabled]="passwordInvalid || emailInvalid" id="btn_login" type="submit" class="button button-royal button-large button-block" value="ENTRAR" /><br>
     <a href="#" (click)="registerUser()" id="btn_register" class="button button-royal button-block button-clear">Quero me cadastrar</a>
   </form>
 </ion-content>
