--- a/app/pages/register-user/register-user.html
+++ b/app/pages/register-user/register-user.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="register-user">
     <form (ngSubmit)="createUser(user)">
         <ion-list>
             <ion-item>
