--- a/app/pages/user/user.html
+++ b/app/pages/user/user.html
@@ -1,3 +1,3 @@
-<ion-content padding>
+<ion-content padding class="user">
   <a href="#" (click)="doLogout()" class="button button-royal  button-block button-clear">Sair</a>
 </ion-content>
