--- a/app/pages/report-case/report-case.html
+++ b/app/pages/report-case/report-case.html
@@ -4,21 +4,21 @@
   </ion-navbar>
 </ion-header>-->
 
-<ion-content padding>
+<ion-content padding class="report">
     <form (ngSubmit)="saveCase(data)">
-        <ion-item>
+        <ion-item class="report">
           <ion-card id="cardImage" (click)=presentActionSheet()>
             <img [src]="data.picture" name="picture"  id="picture">
           </ion-card>
         </ion-item>
-        <ion-list>
-            <ion-item>
+        <ion-list >
+            <ion-item class="report">
               <ion-label>Localização:</ion-label>
               <ion-input [(ngModel)]="data.address" on-tap="openMap()" type="text" id="address" name="address" required></ion-input>
               <!--<ion-input [(ngModel)]="data.address" on-tap="openMap()" type="text" id="location" name="location" required></ion-input>-->
               <ion-icon name="pin" item-right></ion-icon>
             </ion-item>
-            <ion-item>
+            <ion-item class="report">
               <ion-label>Tipo de caso:</ion-label>
                 <ion-select [(ngModel)]="data.category_id" name="category_id" okText="Ok" cancelText="Cancelar">
                   <ion-option value="1">Foco do mosquito</ion-option>
@@ -27,7 +27,7 @@
                   <ion-option value="4">Caso de Chikungunya</ion-option>                    
                 </ion-select>
             </ion-item>
-            <ion-item>
+            <ion-item class="report">
               <ion-label>Comentários:</ion-label>
               <ion-textarea [(ngModel)]="data.comments" type="text" name="comments" rows="4" maxlenght="150" id="comments" required></ion-textarea>
             </ion-item>
