--- a/app/pages/cases/all-cases.html
+++ b/app/pages/cases/all-cases.html
@@ -8,7 +8,7 @@
   <div id="mapAllCases"></div>
   <div id="legend-all-cases">
     Legenda:
-    <div class="display-flex-all"><div class="legend-box-all" style="background: #D90022;"></div> Dengue</div>
+    <div class="display-flex-all"><div class="legend-box-all" style="background: #00d939;"></div> Dengue</div>
     <div class="display-flex-all"><div class="legend-box-all" style="background: #006DF0;"></div> Zica</div>
     <div class="display-flex-all"><div class="legend-box-all" style="background: #000000;"></div> Chikungunya</div>
   </div>
