--- a/app/pages/cases/detail-case.html
+++ b/app/pages/cases/detail-case.html
@@ -5,8 +5,8 @@
 </ion-header>
 
 <ion-content>
-  <div [hidden]="!hasImage">
-    <ion-img [src]="case.image"></ion-img>
+  <div  [hidden]="!hasImage">
+    <ion-img id="imgDetail" [src]="case.image"></ion-img>
   </div>
   <div>
     <img [src]="case.map" alt="Mapa">
