include info page

--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -3,4 +3,6 @@
   <ion-tab [root]="tabRootReportCase" tabIcon="md-locate"></ion-tab>
   <ion-tab [root]="tabRootCases" tabIcon="md-stats" tabs-md-tab-color-active="#425cf4"><img src="" alt=""></ion-tab>
   <ion-tab [root]="tabRootUser" tabIcon="md-person"></ion-tab>
+  <ion-tab [root]="tabRootInfo" tabIcon="ios-information-circle"></ion-tab>
+  
 </ion-tabs>
