--- a/app/pages/info/info.html
+++ b/app/pages/info/info.html
@@ -1,12 +1,69 @@
 <ion-content>
-    <h2>informações</h2>
-    <p>Aqui você pode consultar informações sobre o Aedes Aegypt e suas doenças.</p>
-    <br>
-    <br>
-    <h3>&bull; O mosquito</h3>
-    <p class="indent">O Mosquito Aedes aegypti mede menos de um centímetro, tem aparência inofensiva, cor café ou preta e listras brancas no
-        corpo e nas pernas. Costuma picar nas primeiras horas da manhã e nas últimas da tarde, evitando o sol forte, mas,
-        mesmo nas horas quentes, ele pode atacar à sombra, dentro ou fora de casa. Há suspeitas de que alguns ataquem também
-        durante a noite. O indivíduo não percebe a picada, pois no momento não dói e nem coça. </p>
+    <div id="infoPage">
+        <h2>informações</h2>
+        <p>Aqui você pode consultar informações sobre o Aedes Aegypti e suas doenças.</p>
+        <br>
+        <br>
+        <h4>&bull; O mosquito</h4>
+        <p>O Mosquito Aedes aegypti mede menos de um centímetro, tem aparência inofensiva, cor café ou preta e listras brancas
+            no corpo e nas pernas. Costuma picar nas primeiras horas da manhã e nas últimas da tarde, evitando o sol forte,
+            mas, mesmo nas horas quentes, ele pode atacar à sombra, dentro ou fora de casa. Há suspeitas de que alguns ataquem
+            também durante a noite. O indivíduo não percebe a picada, pois no momento não dói e nem coça. </p>
+        <figure>
+            <img src="img/aedes.jpg" alt="mosquito aedes aegypti">
+            <figcaption>Aedes aegypti</figcaption>
+        </figure>
+        <p>O único modo possível de evitar a transmissão de doenças é a eliminação do mosquito transmissor. A melhor forma é
+            combater os focos de acúmulo de água, locais propícios para a criação do mosquito </p>
 
+        <h4>&bull; Dengue</h4>
+
+        <p>É a doença transmitida pelo Aedes Aegypti mais comum. Geralmente os sintomas se manifestam a partir do 3° dia depois
+            da picada do mosquitos.</p>
+        <p>O dengue é uma doença infecciosa causada por um arbovírus, que ocorre principalmente em áreas tropicais e subtropicais
+            do mundo, inclusive no Brasli. As epidemias geralmente ocorrem no verão, durante ou imediatamente após períodos
+            chuvosos.
+        </p>
+        <p>Abaixo podemos verificar os principais sintomas da dengue classica e hemorragica:</p>
+        <br>
+        <figure class="figure-dengue">
+            <img src="img/dengue_classica.png" alt="sintomas dengue">
+            <figcaption>Sintomas da dengue clássica</figcaption>
+            <br>
+            <br>
+            <img src="img/dengue_hemorragica.png" alt="sintomas dengue">
+            <figcaption>Sintomas da dengue hemorrágica</figcaption>
+        </figure>
+        <br>
+        <br>
+        <h4>&bull; Zika</h4>
+        <p>Os Sintomas do Zika vírus incluem conjuntivite e febre, além de outros e começam a ser sentidos aproximadamente 10
+            dias após ser picado O Zika vírus não é contagioso e só pode ser transmitido pelo mesmo mosquito</p>
+
+        <ul>
+            <li>Febre, oscliando entre 37,8°C e 38,5°C;</li>
+            <li>Dor nos músculos do corpo todo;</li>
+            <li>Conjuntivite, é uma inflamação dos olhos, provocando cor avermelhada nos olhos, olhos lacrimejando, pálpebras
+                inchadas e secreção amarela;</li>
+            <li>Dor nas articulações, principalmente nas articulações das mãos e pés;</li>
+            <li> Dor de cabeça, localizada principalmente na região atrás dos olhos;</li>
+            <li> Hipersensibliidade nos olhos, e maior sensibliidade à luz do dia;</li>
+            <li> Manchas vermelhas na pele;</li>
+            <li> Cansaço físico e mental, sensação de esgotamento.</li>
+        </ul>
+        <br>
+        <br>
+        <h4>&bull; Chikungunya </h4>
+        <p>A pessoa infectada leva de dois a dez dias, podendo chegar a 12 dias, para apresentar os sintomas. A Maioria de indivíduos
+            que sofrem do chikungunya fazem uma recuperação completa, mas alguns pacientes podem observar efeitos permanentes.
+            A Dor articular, pode relatada por diversos meses ou anos após a infecção inicial.</p>
+            <p>Não tratamento específico. Os sintomas são tratados com medicação para a febre e dores
+                articulares (antiinflamatórios)</p>
+            
+            <figure>
+                <img src="img/CHIKUNGUNYA.jpg" alt="sintomas CHIKUNGUNYA">
+                <figcaption>Sintomas de Chikungunya</figcaption>
+            </figure>
+
+    </div>
 </ion-content>
