--- a/app/pages/cases/cases.html
+++ b/app/pages/cases/cases.html
@@ -1,6 +1,6 @@
 <ion-content class="cases">
-	<div style="width: 100px; height: 100px;"></div>
-	<ion-list>
+	<!--<div style="width: 30px; height: 100px;"></div>-->
+	<ion-list id="listCases">
 
 		<ion-item (click)="myCasesPage()" class="div-list cases">
 			<br>
