--- a/app/pages/cases/detail-case.html
+++ b/app/pages/cases/detail-case.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <div  [hidden]="!hasImage">
+  <div  [hidden]="!hasImage" style="width:17em;height: 17em;margin:auto;margin-bottom:0px;">
     <ion-img id="imgDetail" [src]="case.image"></ion-img>
   </div>
   <div>
