--- a/app/pages/cases/graphs-cases.html
+++ b/app/pages/cases/graphs-cases.html
@@ -5,6 +5,7 @@
 </ion-header>
 
 <ion-content>
+    <!--<div id="chart"></div>-->
     <table>
         <tr id="header">
             <th class="firstTd">
