--- a/app/pages/info/info.html
+++ b/app/pages/info/info.html
@@ -1,6 +1,6 @@
 <ion-content>
     <div id="infoPage">
-        <h2>informações</h2>
+        <h2><I></I>nformações</h2>
         <p>Aqui você pode consultar informações sobre o Aedes Aegypti e suas doenças.</p>
         <br>
         <br>
@@ -16,6 +16,7 @@
         <p>O único modo possível de evitar a transmissão de doenças é a eliminação do mosquito transmissor. A melhor forma é
             combater os focos de acúmulo de água, locais propícios para a criação do mosquito </p>
 
+        <br>
         <h4>&bull; Dengue</h4>
 
         <p>É a doença transmitida pelo Aedes Aegypti mais comum. Geralmente os sintomas se manifestam a partir do 3° dia depois
@@ -34,7 +35,7 @@
             <img src="img/dengue_hemorragica.png" alt="sintomas dengue">
             <figcaption>Sintomas da dengue hemorrágica</figcaption>
         </figure>
-        <br>
+
         <br>
         <h4>&bull; Zika</h4>
         <p>Os Sintomas do Zika vírus incluem conjuntivite e febre, além de outros e começam a ser sentidos aproximadamente 10
@@ -52,7 +53,7 @@
             <li> Cansaço físico e mental, sensação de esgotamento.</li>
         </ul>
         <br>
-        <br>
+        
         <h4>&bull; Chikungunya </h4>
         <p>A pessoa infectada leva de dois a dez dias, podendo chegar a 12 dias, para apresentar os sintomas. A Maioria de indivíduos
             que sofrem do chikungunya fazem uma recuperação completa, mas alguns pacientes podem observar efeitos permanentes.
