--- a/www/index.html
+++ b/www/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+  
   <meta charset="UTF-8">
   <title>Ionic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -12,6 +13,7 @@
   <link md-href="build/css/app.md.css" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">
 
+  
 </head>
 
 <body>
@@ -31,6 +33,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgNih6IMSYh-o0JkJoQGe9V-F_RQlOoC8&libraries=visualization" async defer></script>
   <script src="lib/geolib.min.js"></script>
   <script src="lib/markerclusterer.js"></script>
+  <script src="lib/fusioncharts/fusioncharts.js"></script>
+  <script src="lib/fusioncharts/fusioncharts.charts.js"></script>
 </body>
 
 </html>
